--- a/config/default/core.entity_form_display.node.partner.default.yml
+++ b/config/default/core.entity_form_display.node.partner.default.yml
@@ -161,7 +161,7 @@ content:
       title: 'Splash Award'
       title_plural: 'Splash Awards'
       edit_mode: open
-      closed_mode: summary
+      closed_mode: preview
       autocollapse: none
       closed_mode_threshold: 0
       add_mode: button
