--- a/config/default/field.field.node.case.field_logo.yml
+++ b/config/default/field.field.node.case.field_logo.yml
@@ -5,12 +5,13 @@ dependencies:
   config:
     - field.storage.node.field_logo
     - media.type.image
+    - media.type.svg
     - node.type.case
 id: node.case.field_logo
 field_name: field_logo
 entity_type: node
 bundle: case
-label: Partner
+label: Logo
 description: ''
 required: true
 translatable: false
@@ -21,9 +22,10 @@ settings:
   handler_settings:
     target_bundles:
       image: image
+      svg: svg
     sort:
       field: _none
       direction: ASC
     auto_create: false
-    auto_create_bundle: ''
+    auto_create_bundle: image
 field_type: entity_reference
